<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity">

    <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/color_bg"
                android:orientation="vertical"/>

        <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout6">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/color_bg"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="50dp"
                    android:src="@mipmap/ic_launcher"
                    android:background="@drawable/layout_bg"
                    android:contentDescription="smart"/>

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:textSize="25sp"
                    android:text="@string/sign_in"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingTop="8dp">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/left_corner"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_account_circle_24px"
                        tools:ignore="ContentDescription"/>


                <EditText
                        android:id="@+id/edtEmailIn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/right_corner"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        tools:ignore="Autofill"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/left_corner"
                        android:padding="8dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/ic_lock_black_24dp"
                        tools:ignore="ContentDescription"/>

                <EditText
                        android:id="@+id/edtPassIn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/right_corner"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        tools:ignore="Autofill"/>
            </LinearLayout>
            <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:padding="8dp"/>

        </LinearLayout>
        <TextView
                android:id="@+id/btnForgot"
                android:paddingTop="0dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/button_bg"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:text="@string/forgot_password"/>
        <TextView
                android:id="@+id/btnToSignup"
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_height="30sp"
                android:background="@drawable/button_bg"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:text="@string/to_sign_up"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:paddingBottom="8dp"
                    android:padding="8dp"
                    android:background="@drawable/right_corner"
                    android:layout_width="120dp"
                    android:text="@string/or_login"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            <ImageButton
                    android:id="@+id/btnFacebook"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_facebook_app_logo"
                    tools:ignore="ContentDescription"/>
            <ImageButton
                    android:id="@+id/btnGoogle"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_gmail_app_logo"
                    tools:ignore="ContentDescription"/>
        </LinearLayout>

        <ProgressBar
                android:id="@+id/probarIn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:indeterminate="true"
                android:visibility="invisible"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>