<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/color_bg"
                android:orientation="vertical"/>

        <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout6">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/color_bg"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/layout_bg"
                    android:contentDescription="Smart"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"/>

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/sign_up"
                    android:textSize="25sp"
                    android:textAllCaps="true"
                    android:layout_marginTop="25dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingTop="8dp">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="12dp"
                        android:padding="8dp"
                        android:background="@drawable/left_corner"
                        android:src="@drawable/ic_baseline_account_circle_24px"
                        tools:ignore="ContentDescription"/>

                <EditText
                        android:id="@+id/edtNameUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/right_corner"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        tools:ignore="Autofill"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="12dp"
                        android:padding="8dp"
                        android:background="@drawable/left_corner"
                        android:src="@drawable/ic_email_black_24dp"
                        tools:ignore="ContentDescription"/>

                <EditText
                        android:id="@+id/edtEmailUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="0dp"
                        android:background="@drawable/right_corner"
                        android:hint="@string/email"
                        android:padding="8dp"
                        android:inputType="textEmailAddress"
                        tools:ignore="Autofill"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/left_corner"
                        android:padding="8dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/ic_lock_black_24dp"
                        tools:ignore="ContentDescription"/>

                <EditText
                        android:id="@+id/edtPassUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:background="@drawable/right_corner"
                        android:hint="@string/password"
                        android:padding="8dp"
                        android:layout_marginTop="12dp"
                        android:inputType="textPassword"
                        tools:ignore="Autofill"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/left_corner"
                        android:padding="8dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/ic_lock_black_24dp"
                        tools:ignore="ContentDescription"/>

                <EditText
                        android:id="@+id/edtPassCf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:background="@drawable/right_corner"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:layout_marginTop="12dp"
                        tools:ignore="Autofill"/>
            </LinearLayout>

            <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_bg"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textSize="20sp"/>



        </LinearLayout>

        <TextView
                android:id="@+id/btnToSignIn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_gravity="center|top"
                android:background="@drawable/button_bg"
                android:text="@string/to_sign_in"
                android:textAllCaps="false"
                android:textSize="12sp"/>

        <ProgressBar
                android:id="@+id/probarUp"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="invisible"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>